# Kylin-ai

./: .gitignore  CMakeLists.txt  README.en.md  README.md
docs/: 麒麟 AI SDK 开发指南.docx
src/: chatwindow.cpp  chatwindow.h  chatwindow.ui  customrole.cpp  customroledialog.cpp  customroledialog.h  customroledialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rolemanager.cpp  rolemanager.h  rolemanager.ui  voicehandler.cpp  voicehandler.h
